--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6b23c1f8-26ac-47c7-8a7e-6de227c1812b",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,10 @@
     "# 建立 Gradio 介面\n",
     "interface = gr.Interface(\n",
     "    fn=predict_sentiment,\n",
-    "    inputs=\"text\",\n",
+    "    inputs=gr.Dropdown(choices=[\"The app is excellent!! \",                    \n",
+    "                \"Not Free. Free upto only 5 Habbits.\",\n",
+    "                \"This app is very bad\"],\n",
+    "                label=\"Select a Review\"),\n",
     "    outputs=\"text\",\n",
     "    title=\"Sentiment Analysis\",\n",
     "    description=\"輸入一篇評論，判別其為正向、中立或負向\"\n",
